--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="n">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="pink">#FF00FF</color>
 </resources>
