--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:layout_gravity="center"
     android:background="@color/blue">
 
+
             <!--Image View-->
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +64,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_weight=".2">
+            android:layout_weight=".3">
 
 
                         <!--News-->
@@ -186,11 +187,19 @@
                     <!--Ad View-->
 
         <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:orientation="vertical"
-            android:layout_weight=".6"
+
             android:layout_margin="5dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|left"
+                android:text="©Developed by\nMusadul &amp; Shipon"
+                android:textSize="10sp"
+                android:paddingTop="20dp"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
 
