--- a/app/src/main/res/menu/menu3.xml
+++ b/app/src/main/res/menu/menu3.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:title="Student Registration"
+        android:id="@+id/studentRegId" />
+
+    <item android:title="Admin Registration"
+        android:id="@+id/adminRegId" />
+
+    <item
+        android:id="@+id/adminActivityId"
+        android:orderInCategory="300"
+        android:title="Admin"
+        app:showAsAction="always"></item>
 
 </menu>
