--- a/app/src/main/res/layout/activity_developer_info.xml
+++ b/app/src/main/res/layout/activity_developer_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DeveloperInfoActivity"
+    tools:context=".acitivity.DeveloperInfoActivity"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:background="@color/blue">
