--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".acitivity.AdminActivity"
+    tools:context=".acitivity.AdminLoginActivity"
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/adminLayout">
@@ -46,39 +46,21 @@
         android:gravity="center|top"
         android:orientation="vertical">
         <EditText
-            android:id="@+id/edtMail"
+            android:id="@+id/edt_admin_login_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="E-mail"
+            android:hint="ID"
             android:text="" />
         <EditText
-            android:id="@+id/edtPassword"
+            android:id="@+id/edt_admin_login_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
             android:text="" />
-        <!--<EditText-->
-            <!--android:layout_width="300dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/edtEmail"-->
-            <!--android:hint="E-mail"-->
-            <!--android:layout_marginTop="80dp"-->
-            <!--android:inputType="textEmailAddress"-->
-            <!--android:textSize="30sp"-->
-            <!--android:background="@drawable/btn_signin_background"/>-->
-        <!--<EditText-->
-            <!--android:layout_width="300dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/edtPassword"-->
-            <!--android:hint="Password"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:maxLength="10"-->
-            <!--android:textSize="30sp"-->
-            <!--android:background="@drawable/btn_signin_background"/>-->
+
 
         <Button
-            android:id="@+id/adminSignInID"
+            android:id="@+id/bt_admin_login"
             style="@android:style/Widget.Holo.Light.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
