--- a/app/src/main/res/layout/activity_admin_reg.xml
+++ b/app/src/main/res/layout/activity_admin_reg.xml
@@ -13,8 +13,15 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:orientation="vertical">
-
         <EditText
+        android:id="@+id/edtId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ID"
+        android:inputType="text"
+        android:text="" />
+        <EditText
+
             android:id="@+id/edtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
